VERSION 5.1.3
=============

* MODIFIED: `@pce <-operating_system' now returns one of win32, win95
  or winnt on Windows system rather then just the fixed win32.
  @pce<-window_system returns `windows', regardless of the version.

* ENHANCED: Program around 8x8 brush-size limit for DOS-7 based windows
  system (95,98,ME, ...).  Smaller brushes are enlarged automatically,
  while filling rectangular areas using larger brushes is performed
  `by hand'.

* MODIFIED: Moved call to ->unlink *before* releasing assoc and hypers.

* ENHANCED: `frame->return' and `frame<-confirm' type-check to unchecked,
  so Prolog terms can be returned using this mechanism.

* ADDED: text_margin->event to handle the fragment selection.

* FIXED: Placement of scrollbar on editor when attaching a margin to an
  open editor.

* ADDED: `code<->debug_class: service' to hide everything executed by a
  code object from the tracer.  Used by PceEmacs, Visual Hierarchy and
  Inspector to hide idle events and changes-tracking from the Prolog
  debugger.

* FIXED: Avoid possibility of last-window variable (in evt/event.c) to
  become invalid.

* ADDED: library(file_item) the method file_item ->browse to start browsing
  using @finder.

* ENHANCED: Displaying sequenced of modal windows and input-focus handling
  (X11 version).

* FIXED: Error message on `class_variable->value' when passing an illegal
  value.

* MODIFIED: Organisational issues in PceEmacs: renamed class emacs_window
  into emacs_frame.

* FIXED: Type-error in manual tools: man_button_fragment ->initialise:
  Argument 4 (object): `object' expected.

* FIXED: Honour colour of `text_item<-value_text'.

* FIXED: Added *-> to meta-predicates for PceEmacs cross-referencer.

* FIXED: Win32: `box->fill_offset' for boxes displayed on sub-devices.

* PORT: Better diagnosis for libXpm and libjpeg and their headers in
  configure, helping users to fix incomplete or broken installation
  environment.
