@@ -1,0 +1,47 @@
+/* XPM */
+static char * vishier_xpm[] = {
+"32 32 12 1",
+" 	c None",
+".	c blue",
+"X	c #BEBEBE",
+"o	c black",
+"O	c #708090",
+"+	c magenta",
+"@	c red",
+"#	c #868286",
+"$	c white",
+"%	c cyan",
+"&	c green",
+"*	c yellow",
+"                                ",
+"                                ",
+"                                ",
+"    .....XooooX                 ",
+"    ...ooOOOOOOoo++o            ",
+"    ..oOOOooooOOOo+o     @@@o   ",
+"    .oOOoo####ooOOoo#####@@@o   ",
+"    oOOo.o  #  +oOOo  #  @@@o   ",
+"    oXooooo #  oooOo  #  oooo   ",
+"   XXXo  o$o#    oOOo #         ",
+"   oXo  o$$o#     oOo #         ",
+"   oXo o$$o #  %%%oOo #  ...o   ",
+"   oXo o$o  ###%%%oOo ###...o   ",
+"   oXo  o   #  %%%oOo #  ...o   ",
+"   oXo      #  %%%oOo #  oooo   ",
+"   XXXo     #  oooOOo #         ",
+"    oXo     #    oXo  #         ",
+"    oXXo    #   oXXo  #  &&&o   ",
+"     oXXoo  # ooXXoo  ###&&&o   ",
+"      oXXXooooXXXoXOo #  &&&o   ",
+"       ooXXXXXXoooXXOo#  oooo   ",
+"         XooooX***oXXOo         ",
+"               oooooXXOo        ",
+"                    oXXOo%%%o   ",
+"                     oXXOo%%o   ",
+"                      oXXOo%o   ",
+"                       oXXOoo   ",
+"                        oXXOo   ",
+"                         oXXo   ",
+"                          oo    ",
+"                                ",
+"                                "};
